--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "dependencies": {
       "seedit-config": "~0.1.1",
       "jquery": "~1.8.3",
-      "eventor": "~0.0.3"
+      "eventor": "~0.0.3",
+      "import-style": "~1.0.0"
     },
     "devDependencies": {
       "expect.js": "0.3.1"
